tests/success/explicit_move_construct.bz
import resource;

function test()
{
	(consteval {
		let a = complex_resource_t();
		complex_resource_t(move a);
	});
}
