tests/error/move_across_while_loop_boundary.bz
function test()
{
	let i = 0;
	while (true)
	{
		move i;
	}
}
